Add @nuxtjs/tailwindcss dependency

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1",
     "@popperjs/core": "^2.11.8",
     "lucide-vue-next": "^0.446.0",
     "nuxt": "^3.13.0",
