--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.1",
+    "@nuxtjs/supabase": "^1.4.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.45.4",
     "lucide-vue-next": "^0.446.0",
     "nuxt": "^3.13.0",
     "v-calendar": "^3.1.2",
