--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@popperjs/core": "^2.11.8",
     "@supabase/supabase-js": "^2.45.4",
     "lucide-vue-next": "^0.446.0",
+    "nodemailer": "^6.9.15",
     "nuxt": "^3.13.0",
     "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.16",
     "daisyui": "^4.12.10",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
